# scholar-fi

./: .gitignore  .gitmodules  DEPLOYMENT.md  README.md
backend/: .env.example  .gitignore  README.md  package-lock.json  package.json  vercel.json
backend/api/: index.js
backend/src/: app.controller.ts  app.module.ts  main.ts
components/f/figma/: ImageWithFallback.tsx
contracts/: .env.example  .gitignore  CLAUDE.md  Makefile  README.md
contracts/base/: foundry.toml  package.json
contracts/base/script/: Deploy.s.sol
contracts/base/src/: ParentDepositSplitter.sol  ScholarFiBridge.sol
contracts/celo/: .env.example  foundry.toml  package.json
contracts/celo/script/: Deploy.s.sol
contracts/celo/src/: ScholarFiAgeVerifier.sol  ScholarFiVault.sol
contracts/docs/: DEPLOYMENT.md  INSTALLATION.md  SETUP.md  TRACK_COMPLIANCE.md
contracts/oasis/: .env.example  foundry.toml  package.json
contracts/oasis/script/: Deploy.s.sol
contracts/oasis/src/: ChildDataStore.sol
contracts/rofl/: .env.example  Cargo.toml
contracts/rofl/src/: main.rs
frontend/: .env.example  index.html  package-lock.json  package.json  vercel.json  vite.config.ts
frontend/api/: README.md  create-child-account.ts  types.ts
frontend/api/webhooks/: celo.ts  privy.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/abis/: ChildDataStore.json  ParentDepositSplitter.json  ScholarFiAgeVerifier.json  ScholarFiBridge.json  ScholarFiVault.json
frontend/src/components/: AddFunds.tsx  ApprovedMerchants.tsx  BottomNav.tsx  EducationSavings.tsx  FAQ.tsx  HyperlaneTracker.tsx  (+12 more)
(+14 files in other folders)
