[package]
name = "scholar-fi-rofl"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
env_logger = "0.10"
log = "0.4"

# Note: For actual TEE deployment, would use oasis-runtime-sdk
# Simplified for hackathon demo
